--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,29 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+paginate: 10
+
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
 plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-mermaid
+
+sass:
+  load_paths:
+    - _sass
+    - node_modules
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
+exclude:
+  - node_modules
+  - package-lock.json
 #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules
